user controller added
