# api/data/user.model.js
@@ -1,0 +1,18 @@
+const mongoose = require('mongoose');
+
+const userSchema = new mongoose.Schema({
+    username: {
+        type : String,
+        unique: true,
+        required : true
+    },
+    name:{
+        type: String
+    },
+    password: {
+        type: String,
+        required: true
+    }
+});
+
+mongoose.model('User', userSchema);
